--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>2003年 F1チーム運営シミュレーション</title>
+    <title>F1チーム運営シミュレーション2003</title>
     <style>
         /* 見た目をちょっとだけ整えます！ */
         body { font-family: sans-serif; padding: 20px; }
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-    <h1>🏎️ 2003年 F1チーム運営シミュレーション</h1>
+    <h1>F1チーム運営シミュレーション2003</h1>
     
     <div id="game-screen">
         <h2 id="screen-title">ロード中...</h2>
